# Rust-Sqlx-Poc

./: Cargo.toml  README.md
src/: db.rs  error.rs  main.rs  models.rs  schema.rs
