[package]
name = "sqlx_poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = "0.39.2"
sqlx = { version = "0.7.4", features = ["runtime-async-std", "runtime-tokio-native-tls", "macros", "postgres"] }
async-std = { version = "1", features = [ "attributes" ] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"